add: external resume view

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -50,7 +50,8 @@
     "CallToAction": "Contact Me",
     "CallToActionResume": "Resume",
     "Profession": "Web Developer",
-    "PhoneNumber": "+61416460092"
+    "PhoneNumber": "+61416460092",
+    "ViewResume": "https://docs.google.com/document/d/1GuF8Cmcnx14_NCsiQX1c5XChN99t3MwE1n1F9QkVNwQ/edit?usp=sharing"
   },
   "InfoCards": {
     "Animation": {
