--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -50,7 +50,8 @@
     "CallToAction": "Contate me",
     "CallToActionResume": "Curriculo",
     "Profession": "Desenvolvedor Web",
-    "PhoneNumber": "+5511934282440"
+    "PhoneNumber": "+5511934282440",
+    "ViewResume": "https://docs.google.com/document/d/1sunVS8-psdI90JYLiLgU5omjdT3s0ulgRJ-YcKyGgTY/edit?usp=sharing"
   },
   "InfoCards": {
     "Animation": {
