add: sm menu button fixed

--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -3,7 +3,7 @@
     {
       "id": "menuAbout",
       "title": "about",
-      "route": "/#route-section",
+      "route": "/",
       "value": "Sobre Mim"
     },
     {
