add: base education accordion on sm screens

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -101,6 +101,11 @@
               "valueDescription": "Certification regarding the score of 183 at Cambridge's First Certificate in English (FCE) examination, equivalent to CEFR's C1 Level."
             }
           ]
+        },
+        {
+          "title": "online courses",
+          "value": "Online Courses",
+          "items": []
         }
       ]
     },
