add: translations on public and fixes for build

--- a/public/locale/en.json
+++ b/public/locale/en.json
@@ -228,5 +228,12 @@
       ],
       "CardOne": "Main"
     }
-  }
+  },
+  "Recommendations": [
+    {
+      "author": "Name",
+      "link": "URL",
+      "Content": "Content"
+    }
+  ]
 }
