--- a/public/locale/pt.json
+++ b/public/locale/pt.json
@@ -49,7 +49,52 @@
       "PageTitle": "Minhas Animações",
       "NavMessage": "Pressione ou deixe o mouse na imagem",
       "TextOne": "Esta seção é uma galeria das animações em CSS/JS que venho fazendo como hobby. Ao colocar o mouse sobre as imagens, ou pressioná-las, é possível visualizar um vídeo da animação. Mas se quiser vê-las sendo executadas, é só clicar no nome de cada uma para ir ao meu Codepen. 😉",
-      "TextTwo": ""
+      "TextTwo": "",
+      "SectionLength": "7",
+      "Sections": [
+        {
+          "name": "Cooking Kirby",
+          "component": "/src/assets/videos/cookingKirby.mp4",
+          "reference": "kirbyVid",
+          "link": "https://codepen.io/kojji/full/LYdqqjr"
+        },
+        {
+          "name": "Octopiano",
+          "component": "/src/assets/videos/octopiano.mp4",
+          "reference": "octopianoVid",
+          "link": "https://codepen.io/kojji/full/abVxxOQ"
+        },
+        {
+          "name": "Surfing Pikachu",
+          "component": "/src/assets/videos/surfing.mp4",
+          "reference": "surfingPikachuVid",
+          "link": "https://codepen.io/kojji/full/poaYvVL"
+        },
+        {
+          "name": "GSAP outlines rotation",
+          "component": "/src/assets/videos/rotating.mp4",
+          "reference": "rotatingVid",
+          "link": "https://codepen.io/kojji/full/LYdgmdg"
+        },
+        {
+          "name": "GSAP Rotating Squares",
+          "component": "/src/assets/videos/squares.mp4",
+          "reference": "squaresVid",
+          "link": "https://codepen.io/kojji/full/poLxrMW"
+        },
+        {
+          "name": "Beach Waves",
+          "component": "/src/assets/videos/shortVer.mp4",
+          "reference": "beachVid",
+          "link": "https://codepen.io/kojji/full/QWOJJGQ"
+        },
+        {
+          "name": "City Lights",
+          "component": "/src/assets/videos/city_lights.mp4",
+          "reference": "cityLightsVid",
+          "link": "https://codepen.io/kojji/full/zYPyPJV"
+        }
+      ]
     },
     "Education": {
       "PageTitle": "Formação",
@@ -57,6 +102,7 @@
         {
           "title": "education",
           "value": "Formação Acadêmica",
+          "length" : "3",
           "items": [
             {
               "title": "ECAC",
@@ -81,6 +127,7 @@
         {
           "title": "certification",
           "value": "Certificações",
+          "length" : "3",
           "items": [
             {
               "title": "ccp",
@@ -105,6 +152,7 @@
         {
           "title": "online courses",
           "value": "Cursos Online",
+          "length" : "0",
           "items": []
         }
       ]
@@ -115,6 +163,7 @@
         {
           "title": "paid",
           "value": "Serviços de Programação",
+          "length" : "5",
           "items": [
             {
               "title": "mutant",
@@ -151,6 +200,7 @@
         {
           "title": "other",
           "value": "Outros Projetos",
+          "length" : "5",
           "items": [
             {
               "title": "protfolio-two",
@@ -187,6 +237,7 @@
         {
           "title": "misc",
           "value": "Geral",
+          "length" : "2",
           "items": [
             {
               "title": "coin",
@@ -221,6 +272,16 @@
         "No momento, em meu tempo livre, <b>estou visando adquirir mais conhecimento de animações CSS e JS, criação e manipulação de imagens svg, testes automatizados e arquitetura Cloud no AWS</b>."
       ],
       "CardOne": "Principal"
+    },
+    "Recommendations": {
+      "SectionLength": 1,
+      "Items": [
+        {
+          "author": "Name",
+          "link": "URL",
+          "Content": "Content"
+        }
+      ]
     }
   }
 }
