add: injection of content into location

--- a/public/locale/en.json
+++ b/public/locale/en.json
@@ -40,7 +40,8 @@
   "HomeBanner": {
     "CallToAction": "Contact Me",
     "CallToActionResume": "Resume",
-    "Profession": "Web Developer",
+    "Profession": "Developer",
+    "ExtraProfession": "Aspiring Business Analyst",
     "PhoneNumber": "+61416460092",
     "ViewResume": "https://docs.google.com/document/d/1GuF8Cmcnx14_NCsiQX1c5XChN99t3MwE1n1F9QkVNwQ/edit?usp=sharing"
   },
@@ -275,12 +276,12 @@
     }
   },
   "Recommendations": {
-    "SectionLength": 1,
+    "SectionLength": "1",
     "Items": [
       {
         "author": "Name",
         "link": "URL",
-        "Content": "Content"
+        "content": "Content"
       }
     ]
   }
