--- a/public/locale/en.json
+++ b/public/locale/en.json
@@ -41,7 +41,7 @@
     "CallToAction": "Contact Me",
     "CallToActionResume": "Resume",
     "Profession": "Developer",
-    "ExtraProfession": "Aspiring Business Analyst",
+    "ExtraProfession": "Business Analyst",
     "PhoneNumber": "+61416460092",
     "ViewResume": "https://docs.google.com/document/d/1GuF8Cmcnx14_NCsiQX1c5XChN99t3MwE1n1F9QkVNwQ/edit?usp=sharing"
   },
@@ -259,7 +259,8 @@
     "Personal": {
       "PageTitle": "About Me",
       "Paragraphs": [
-        "Hi, I'm Fernando. Graduated in Computer Engineering, I'm a web developer. Working mostly as a back end developer. I've already worked as a full stack web developer and, in some other projects, either in front end or back end development, which can be seen on the <b>\"Experience\"</b> tab. My main development stack is composed of Vue.js, Node.js, Typescript and AWS Services, but I've acquired knowledge in other concepts and technologies. To read a more detailed description of what I know, you can go straight to the <b>\"Skills\"</b> tab.",
+        "Hi, I'm Fernando Koji. Graduated in Computer Engineering and expecienced in web development, I am aiming to become an ICT Business Analyst. Currently working as a Junior Business Analyst, I am focusing my efforts and studies to deepen my knowledge and caquire more experience in the field, it includes wirk experiences, personal projects and courses (Which are better described on the other tabs).",
+        "Working mostly as a back end developer. I've already worked as a full stack web developer and, in some other projects, either in front end or back end development, which can be seen on the <b>\"Experience\"</b> tab. My main development stack is composed of Vue.js, Node.js, Typescript and AWS Services, but I've acquired knowledge in other concepts and technologies. To read a more detailed description of what I know, you can go straight to the <b>\"Skills\"</b> tab.",
         "In terms of web development, my biggest interests are <b>API development and CSS/JS animations</b>. Sadly, I still don't have the skillset to completely make the animations I envision. But one day I'll get there. Spite the fact that I've acquired some API development experience, I know there is a lot of room for improvement, mainly at this profession, which requires constant growth. Although, I do believe I have the more than enough potencial and persistance to learn whatever is needed.",
         "A bunch of information about my capabilities and previous expeciences can be found in this page. Anyhow, there are <b>links in the footer</b>, which you can use to either get to know me better, or to get in touch with me. Hope you enjoy this personal page. 😁"
       ]
