add: tab info and about section update

--- a/public/locale/pt.json
+++ b/public/locale/pt.json
@@ -262,7 +262,8 @@
         "Olá, sou o Fernando. Formado em Engenharia de Computação, sou um desenvolvedor web. Atuando principalmente com back end. Já tive atuações como desenvolvedor full stack e desenvolvi alguns outros projetos só no front end ou só no back end, que podem ser vistos na aba <b>\"Experiência\"</b>. Meu stack de desenvolvimento principal é composto de Vue.js, Node.js, Typescript e serviços AWS, mas tenho conhecimento em outros conceitos e tecnologias. Para ter uma descrição mais detalhada do que eu sei, pode ir direto na aba <b>\"Habilidades\"</b>.",
         "Dentro do desenvolvimento web, meus maiores interesses são, o <b>desenvolvimento de APIs e animações CSS/JS</b>. Infelizmente ainda não tenho as habilidades necessárias para ser capaz de desenvolver plenamente as animações que imagino. Mas acredito que um dia chegarei lá. Apesar de já ter um pouco de experiência no desenvolvimento de APIs, reconheço que há muito espaço para crescimento, ainda mais nessa área que demanda evolução constante, mas acredito ter o potêncial e a persistência necessária para o aprendizado.",
         "Acredito que nesta página tenha uma boa quantidade de informações sobre mim, minhas competências e experiências. Se desejar, há <b>links no rodapé</b> desta página que podem ser úteis para ver mais coisas sobre mim, ou entrar em contato. Espero que você goste deste meu portfolio. 😁"
-      ]
+      ],
+      "length": "3"
     },
     "Skills": {
       "PageTitle": "Minhas Habilidades",
