--- a/public/locale/en.json
+++ b/public/locale/en.json
@@ -259,11 +259,12 @@
     "Personal": {
       "PageTitle": "About Me",
       "Paragraphs": [
-        "Hi, I'm Fernando Koji. Graduated in Computer Engineering and expecienced in web development, I am aiming to become an ICT Business Analyst. Currently working as a Junior Business Analyst, I am focusing my efforts and studies to deepen my knowledge and caquire more experience in the field, it includes wirk experiences, personal projects and courses (Which are better described on the other tabs).",
-        "Working mostly as a back end developer. I've already worked as a full stack web developer and, in some other projects, either in front end or back end development, which can be seen on the <b>\"Experience\"</b> tab. My main development stack is composed of Vue.js, Node.js, Typescript and AWS Services, but I've acquired knowledge in other concepts and technologies. To read a more detailed description of what I know, you can go straight to the <b>\"Skills\"</b> tab.",
-        "In terms of web development, my biggest interests are <b>API development and CSS/JS animations</b>. Sadly, I still don't have the skillset to completely make the animations I envision. But one day I'll get there. Spite the fact that I've acquired some API development experience, I know there is a lot of room for improvement, mainly at this profession, which requires constant growth. Although, I do believe I have the more than enough potencial and persistance to learn whatever is needed.",
-        "A bunch of information about my capabilities and previous expeciences can be found in this page. Anyhow, there are <b>links in the footer</b>, which you can use to either get to know me better, or to get in touch with me. Hope you enjoy this personal page. 😁"
-      ]
+        "Hi, I'm Fernando. Graduated in Computer Engineering. I'm an aspiring Business Analyst and Software Developer. I am in the middle of a journey of taking on experiences that will help me build a solid pathway into a long lasting IT career.",
+        "As a result of all of my efforts up to this point, I have gathered invaluable work experiences and developed a vast range of skills, including strong problem solving skills, an analytical mindset, a solid foundation in corporate communication, business concepts and analytical techniques.",
+        "In this portfolio you can find extensive information about my previous work experiences in the <b>\"Experience\"</b> tab, the <b>\"Education\"</b> tab contains information related to online courses, certifications and formal degrees I have undertaken. As a consequence of self study, work experiences and educational background, the <b>\"Skills\"</b> tab has information about hard skills I have been developing throughout the years.",
+        "Although most of my previous work experiences have been in web development with NodeJs and VueJs, I have been constantly acquiring knowledge in different aspects of software development and business analysis. My goal is to perform as a Developer while improving myself and acquire more experiences until the point where I will be able to make use of all of my business acumen to work as an ICT Business Analyst or other managemental roles."
+      ],
+      "length": "4" 
     },
     "Skills": {
       "PageTitle": "Skills",
